--- a/AUTHORS
+++ b/AUTHORS
@@ -20,9 +20,9 @@ Balint Pfliegel
 Ben Koshy (BKSpurgeon)
 Bill Henry (VoyagerOne)
 braich
+Bojun Guo (noobpwnftw)
 Brian Sheppard (SapphireBrand)
 Bryan Cross (crossbr)
-Bujun Guo (noobpwnftw)
 Chris Cain (ceebo)
 Dan Schmidt
 Daniel Dugovic (ddugovic)
@@ -31,7 +31,6 @@ David Zar
 Daylen Yang (daylen)
 DiscanX
 Eelco de Groot
-ElbertoOne
 erbsenzaehler
 Ernesto Gatti
 Fabian Beuke (madnight)
@@ -76,6 +75,7 @@ Leonardo Ljubičić (ICCF World Champion)
 Leonid Pechenik (lp--)
 Linus Arver
 loco-loco
+Lub van den Berg (ElbertoOne)
 Luca Brivio (lucabrivio)
 Lucas Braesch (lucasart)
 Lyudmil Antonov (lantonov)
