--- a/AUTHORS
+++ b/AUTHORS
@@ -78,10 +78,12 @@ Leonardo Ljubičić (ICCF World Champion)
 Leonid Pechenik (lp--)
 Linus Arver
 loco-loco
+Lolligerhans
 Lub van den Berg (ElbertoOne)
 Luca Brivio (lucabrivio)
 Lucas Braesch (lucasart)
 Lyudmil Antonov (lantonov)
+Maciej Żenczykowski(zenczykowski)
 Matthew Lai (matthewlai)
 Matthew Sullivan
 Mark Tenzer (31m059)
