--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ Ajith Chandy Jose (ajithcj)
 Alain Savard (Rocky640)
 alayan-stk-2
 Alexander Kure
+Alexander Pagel (Lolligerhans)
 Ali AlZhrani (Cooffe)
 Andrew Grant (AndyGrant)
 Andrey Neporada (nepal)
@@ -78,7 +79,6 @@ Leonardo Ljubičić (ICCF World Champion)
 Leonid Pechenik (lp--)
 Linus Arver
 loco-loco
-Lolligerhans
 Lub van den Berg (ElbertoOne)
 Luca Brivio (lucabrivio)
 Lucas Braesch (lucasart)
