--- a/AUTHORS
+++ b/AUTHORS
@@ -22,7 +22,7 @@ Auguste Pop
 Balint Pfliegel
 Ben Koshy (BKSpurgeon)
 Bill Henry (VoyagerOne)
-Bojun Guo (noobpwnftw)
+Bojun Guo (noobpwnftw, Nooby)
 braich
 Brian Sheppard (SapphireBrand, briansheppard-toast)
 Bryan Cross (crossbr)
@@ -75,7 +75,6 @@ Jörg Oster (joergoster)
 Joseph Ellis (jhellis3)
 Joseph R. Prostko
 jundery
-Justin Blanchard
 Justin Blanchard (UncombedCoconut)
 Kelly Wilson
 Ken Takusagawa
