--- a/AUTHORS
+++ b/AUTHORS
@@ -131,13 +131,13 @@ Ryan Schmitt
 Ryan Takker
 Sebastian Buchwald (UniQP)
 Sergei Antonov (saproj)
+Sergei Ivanov (svivanov72)
 sf-x
 Shane Booth (shane31)
 Stefan Geschwentner (locutus2)
 Stefano Cardanobile (Stefano80)
 Steinar Gunderson (sesse)
 Stéphane Nicolet (snicolet)
-svivanov72
 Thanar2
 thaspel
 theo77186
