--- a/AUTHORS
+++ b/AUTHORS
@@ -36,6 +36,7 @@ Dariusz Orzechowski
 David Zar
 Daylen Yang (daylen)
 DiscanX
+double-beep
 Eduardo Cáceres (eduherminio)
 Eelco de Groot (KingDefender)
 Elvin Liu (solarlight2)
@@ -102,6 +103,7 @@ Michael Whiteley (protonspring)
 Michel Van den Bergh (vdbergh)
 Miguel Lahoz (miguel-l)
 Mikael Bäckman (mbootsector)
+Mira
 Miroslav Fontán (Hexik)
 Moez Jellouli (MJZ1977)
 Mohammed Li (tthsqe12)
@@ -141,8 +143,10 @@ Stéphane Nicolet (snicolet)
 Thanar2
 thaspel
 theo77186
+Tom Truscott
 Tom Vijlbrief (tomtor)
 Torsten Franz (torfranz, tfranzer)
+Tracy Emery (basepr1me)
 Uri Blass (uriblass)
 Vince Negri (cuddlestmonkey)
 
