--- a/AUTHORS
+++ b/AUTHORS
@@ -146,7 +146,7 @@ theo77186
 Tom Truscott
 Tom Vijlbrief (tomtor)
 Torsten Franz (torfranz, tfranzer)
-Tracy Emery (basepr1me)
+Tracey Emery (basepr1me)
 Uri Blass (uriblass)
 Vince Negri (cuddlestmonkey)
 
