--- a/AUTHORS
+++ b/AUTHORS
@@ -59,6 +59,7 @@ Fauzi Akram Dabat (FauziAkram)
 Felix Wittmann
 gamander
 Gary Heckman (gheckman)
+George Sobala
 gguliash
 Gian-Carlo Pascutto (gcp)
 Gontran Lemaire (gonlem)
