--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 # List of authors for Stockfish, as of August 4, 2020
 
 # Founders of the Stockfish project and fishtest infrastructure
-Tord Romstad (romstad)
+Tord Romstad (romstad).
 Marco Costalba (mcostalba)
 Joona Kiiski (zamar)
 Gary Linscott (glinscott)
