--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@ Joona Kiiski (zamar)
 Gary Linscott (glinscott)
 
 # Authors and inventors of NNUE, training, NNUE port
-Yu Nasu (ynasu87)
+Yu Nasu (ynasu87)hi
 Motohiro Isozaki (yaneurao)
 Hisayori Noda (nodchip)
 
