adding to AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -193,6 +193,7 @@ Unai Corzo (unaiic)
 Uri Blass (uriblass)
 Vince Negri (cuddlestmonkey)
 zz4032
+Ofek Shochat (ghostway)
 
 
 # Additionally, we acknowledge the authors and maintainers of fishtest,
