--- a/AUTHORS
+++ b/AUTHORS
@@ -4,7 +4,7 @@
 Tord Romstad (romstad)
 Marco Costalba (mcostalba)
 Joona Kiiski (zamar)
-Gary Linscott (glinscott).
+Gary Linscott (glinscott)
 
 # Authors and inventors of NNUE, training, NNUE port
 Yu Nasu (ynasu87)
